private_subnet.tf
# Creating Private subnet 
resource "aws_subnet" "demosubnet2" {
  vpc_id                  = "${aws_vpc.demovpc.id}"
  cidr_block             = "${var.subnet2_cidr}"
  availability_zone = "us-east-1a"

  tags = {
    Name = "Private Subnet"
  }
}
